Fix touch interaction.

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-
+  touch-action: none;
+  
   canvas {
     max-width: calc(min(90vw, 75vh));
     max-height: calc(min(90vw, 75vh));
